# NajaScript_project

./: CMakeLists.txt  README.md  build.sh  exemplo.ns
cmake/modules/: FindANTLR4.cmake
src/: CodeGenerator.h  FluxManager.h  NajaScriptCompiler.cpp  SymbolTable.h
src/grammar/: NajaScript.g4  NajaScript.interp  NajaScript.tokens  NajaScriptLexer.interp
src/grammar/src/grammar/: NajaScript.interp  NajaScriptBaseVisitor.cpp  NajaScriptBaseVisitor.h  NajaScriptLexer.cpp  NajaScriptLexer.h  NajaScriptLexer.interp  NajaScriptParser.cpp  NajaScriptParser.h  NajaScriptVisitor.cpp  NajaScriptVisitor.h
